frontend add inputmaskjs

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,8 +22,9 @@
   </noscript>
   <div id="app"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" integrity="sha384-rgWRqC0OFPisxlUvl332tiM/qmaNxnlY46eksSZD84t+s2vZlqGeHrncwIRX7CGp" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
+  <script src="<%= BASE_URL %>vendor/input-mask/jquery.inputmask.js"></script>
+  <script src="<%= BASE_URL %>vendor/input-mask/jquery.inputmask.date.extensions.js"></script>
+  <script src="<%= BASE_URL %>vendor/input-mask/jquery.inputmask.extensions.js"></script>
   <script src="<%= BASE_URL %>vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="<%= BASE_URL %>vendor/admin-lte/dist/js/adminlte.min.js"></script>
 
